Notices, Projects page, Favicon, Rewording

--- a/index.html
+++ b/index.html
@@ -2,13 +2,14 @@
 <html lang="en"><head>
 	<head>
 		<title>Isabella's portfolio</title>
+		<link rel="icon" type="image/x-icon" href="favicon_panda.ico">
+		<style type="text/css">* {cursor: url(https://cur.cursors-4u.net/smilies/smi-2/smi166.cur), auto !important;}</style>
 		<link href="style.css" rel="stylesheet" type="text/css">
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width">
 		<link rel="preconnect" href="https://fonts.googleapis.com">
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 		<link href="https://fonts.googleapis.com/css2?family=Monofett&family=Potta+One&display=swap" rel="stylesheet">
-		<style type="text/css">* {cursor: url(https://cur.cursors-4u.net/smilies/smi-2/smi166.cur), auto !important;}</style>
 		</head>
 	<body>
 		<section class="main" id="index">
@@ -21,10 +22,10 @@
 			<article class="resume">
 				<div class="primary">
 					<h2>@Resume!</h2>
-					<p>I've racked up some experience and received education in the last few years. You can see everything I've done below this box.<br>Would you like to filter?</p>
+					<p>I've racked up some experience in the last few years. You can see everything I've done below this box.<br>Would you like to filter?</p>
 					<div class="checkboxes">
 						<input type="checkbox" id="tech" data-filter="technology"><label for="tech">Technology</label><br>
-						<input type="checkbox" id="ent" data-filter="entertainment"><label for="ent">Entertainment</label><br>
+						<input type="checkbox" id="art" data-filter="art"><label for="ent">Art</label><br>
 					</div>
 					<input type="submit" value="Submit">
 					</div>
