--- a/portfoliov2/index.html
+++ b/portfoliov2/index.html
@@ -27,6 +27,10 @@
       <!-- the div is here to make sure the header doesn't move anything outside this div when the header becomes longer -->
       <header id="header-text">Hello world!</header>
     </div>
+    <div class="mim" id="outdated">
+        <h2>NOTICE!</h2>
+        <p>This version of my portfolio is outdated, and hasn't been receiving updates since May 8th of 2024. Please defer to the <a href="../index.html">newest version</a> for accurate and improved content.</p>
+    </div>
     <script src="script.js"></script>
     <!-- this is to activate the code that changes "Placeholder" into the welcome text-->
   </section>
