--- a/projects.html
+++ b/projects.html
@@ -2,20 +2,21 @@
 <html lang="en"><head>
 	<head>
 		<title>Isabella's portfolio</title>
+		<link rel="icon" type="image/x-icon" href="favicon_panda.ico">
+		<style type="text/css">* {cursor: url(https://cur.cursors-4u.net/smilies/smi-2/smi166.cur), auto !important;}</style>
 		<link href="style.css" rel="stylesheet" type="text/css">
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width">
 		<link rel="preconnect" href="https://fonts.googleapis.com">
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 		<link href="https://fonts.googleapis.com/css2?family=Monofett&family=Potta+One&display=swap" rel="stylesheet">
-		<style type="text/css">* {cursor: url(https://cur.cursors-4u.net/smilies/smi-2/smi166.cur), auto !important;}</style>
 		</head>
 	<body>
 		<section class="main" id="projects">
 			<div class="primary">
 				<h2>@Projects!</h2>
 				<p>I often do projects in my free time to challenge and improve myself with new things and refresh what I already
-				know. The projects are sorted from newest to oldest. Here are some projects I've decided to show!<br>Click the
+				know. These projects are listed below, sorted from newest to oldest. Here are some projects I've decided to show!<br>Click the
 				titles to open the websites in another tab :)</p>
 				</div>
 			<div>
@@ -23,7 +24,7 @@
 				<h2>@Portfolio_version_2</h2>
 				</a><br>
 				<p>This portfolio was the end project for one of my school's HTML courses.
-				The requirements were pretty low-level and restricting, which is why it looks like a less creative, watered-down version of this current portfolio.
+				The requirements were pretty low-level and restricting, which is why it looks like a less creative, watered-down version of this current portfolio version.
 				<br>This website's creation started Jun 20, 2023, and was gradually upgraded until May 8th, 2024.</p>
 				</div>
 
