--- a/portfoliov1-202207/index.html
+++ b/portfoliov1-202207/index.html
@@ -77,7 +77,7 @@
     </p>
   </div>
   <div class="column" id="created">
-    <sub>This website was created in June-July 2022 (and hasn't been getting updates with new projects since portfoliov2 was finished).</sub>
+    <sub>This website was created in June-July 2022, and hasn't been getting updates with new projects since June of 2023. Please defer to the <a href="../index.html">newest version</a> for accurate and improved content.</sub>
   </div>
 </body>
 
