Lots of rewording, and fixing the welcome div in index

--- a/index.html
+++ b/index.html
@@ -16,8 +16,6 @@
 			<div id="welcome">
 				<!-- the div is here to make sure the header doesn't move anything outside this div when the header becomes longer -->
 				<header id="header-text">Hello! I'm Bella</header> <!-- might wanna change the font for this bc of the korean -->
-				<script src="script.js"></script>
-				<!-- this is to activate the code that changes "Placeholder" into the welcome text-->
 				</div>
 			<article class="resume">
 				<div class="primary">
@@ -50,14 +48,20 @@
 					<p><a target="_blank" href="https://hetmml.nl/vakken/coderclass/">Completed several programming language courses</a> whilst doing the normal high school courses.</p>
 					</div>
 				<div>
-					<h2>@Meervaart Jong</h2><br>
+					<h2>@Koninklijk Theater Carre Amsterdam</h2><br>
+					<h3>2018</h3>
+					<p>Performed in front of a live audience, as well as national TV, on remembrance day.</p>
+					</div>
+				<div>
+					<h2>@Meervaart (Jong)</h2><br>
 					<h3>2017 - 2021</h3>
-					<p>Professional training in streetdance and theatre at Meervaart Jong.</p>
+					<p>Professional training in streetdance and theatre at Meervaart Jong. Performed streetdance and theatre at Theater de Meervaart 1-2 times per year.</p>
 					</div>
 				<div>
 					<h2>@DOS Amsterdam</h2><br>
 					<h3>2017 - 2019</h3>
-					<p>Professional training in athletics.</p>
+					<p>Professional training in athletics. Competed in athletic championships, of which I always won between first and third place.
+</p>
 					</div>
 
 					</article>
@@ -106,5 +110,6 @@
 				<li><a href="projects.html"><h3>Projects</h3></a></li>
 				</ul>
 			</section>
+		<script src="script.js"></script>
 			</body>
 	</html>
