--- a/projects.html
+++ b/projects.html
@@ -41,11 +41,11 @@
 				</div>
 
 			<div>
-				<a target="_blank" href="https://eindproduct-thatbellastuffz.html-css-1-cc-2122.repl.co"><img src="menu.png" class="projects" alt="picture of the project"><br>
+				<img src="menu.png" class="projects" alt="picture of the project"><br>
 				<h2>@Make_a_Menu</h2>
-				</a><br>
+				<br>
 				<p>This was another assignment for school, for which I was assigned to make a website around the theme "menu". I
-				made this September 19th, 2022.</p>
+				made this September 19th, 2022.<br>Unfortunately the admin deleted the website, and it's been permanently lost, so there's no link included here.</p>
 				</div>
 
 			<div>
@@ -67,7 +67,7 @@
 				etc), my favourite playlists I use as background music while coding, a functional note system, and more.
 				Development started July 8, 2022 and is still ongoing. I've separated version 0.8 and 2.0, as I wanted to
 				rewrite codingcore, but keep the original version. Version 0.8 hasn't been updated since July 25, 2022. Version
-				2.0 was created November 21, 2022 and is still in development.<br><a target="_blank" href="https://coding-core-v08.sabellai.repl.co">Open codingcore v0.8 here</a><br><a target="_blank" href="https://coding-core-v20.sabellai.repl.co">Open codingcore v2.0 here</a></p>
+				2.0 was created November 21, 2022 and its development has been paused indefinitely.<br><a target="_blank" href="https://coding-core-v08.sabellai.repl.co">Open codingcore v0.8 here</a><br><a target="_blank" href="https://coding-core-v20.sabellai.repl.co">Open codingcore v2.0 here</a></p>
 				</div>
 
 			<div>
