--- a/projects.html
+++ b/projects.html
@@ -60,7 +60,7 @@
 
 			<div>
 				<img class="projects" src="codingcore1.png" alt="picture of the project"><br>
-				<h2>@CodingCore</h2><br>
+				<div class="invis"><h2>@CodingCore</h2><br>
 				<p>CodingCore is a website I made for myself. I use a lot of websites when coding and I'm too lazy to keep typing
 				in all my searches, so I just made this website to be able to press buttons instead of having to type everything
 				out.<br>Coding Core includes resources such as images, pixels, gifs, HTML help (stackoverflow, HTML validator,
@@ -68,16 +68,16 @@
 				Development started July 8, 2022 and is still ongoing. I've separated version 0.8 and 2.0, as I wanted to
 				rewrite codingcore, but keep the original version. Version 0.8 hasn't been updated since July 25, 2022. Version
 				2.0 was created November 21, 2022 and its development has been paused indefinitely.<br><a target="_blank" href="https://coding-core-v08.sabellai.repl.co">Open codingcore v0.8 here</a><br><a target="_blank" href="https://coding-core-v20.sabellai.repl.co">Open codingcore v2.0 here</a></p>
-				</div>
+				</div></div>
 
 			<div>
 				<a target="_blank" href="https://over-mij.thatbellastuffz.repl.co"><img src="html_exercise.png" class="projects" alt="picture of the project"><br>
-				<h2>@HTML_Exercise
+				<div class="invis"><h2>@HTML_Exercise
 				</h2>
 				</a><br>
 				<p>The HTML Exercise website was made purely to learn some new things about html &amp; css and remember the basics
 				since it'd been a while since I did HTML and CSS. I made this around June 24 2022.</p>
-				</div>
+				</div></div>
 
 			<div>
 				<a target="_blank" href="https://projectcoderclassperiode2.la160209da.repl.co"><img src="safe_society.png" class="projects" alt="picture of the project"><br>
@@ -143,6 +143,7 @@
 				<!-- <li><button class="lightswitch">&#127763;</button></li> -->
 				<li><a href="index.html"><h3>Home</h3></a></li>
 				<li><a href="projects.html"><h3>Projects</h3></a></li>
+				<li><a href="Resume Braam, Isabella.pdf"><h3>Resume PDF</h3></a></li>
 				</ul>
 			</section>
 			</body>
