--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en"><head>
 	<head>
-		<title>Bella's portfolio</title>
+		<title>Isabella's portfolio</title>
 		<link rel="icon" type="image/x-icon" href="favicon_panda.ico">
 		<style type="text/css">* {cursor: url(https://cur.cursors-4u.net/smilies/smi-2/smi166.cur), auto !important;}</style>
 		<link href="style.css" rel="stylesheet" type="text/css">
