--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
 			<a id="now"><div>
 				<h3>Now <a target="_blank" href="https://nownownow.com/about">(?)</a></h3>
 				<p>Still in highschool, year 4 of VWO level. Working on a few projects I might reveal soon (very excited)!
-				<br>Learning to accept and express myself (as you may be able to tell by the amount of "personality" in this site). Rediscovering my love for the arts. Overall in my "era" of personal growth. :)</p>
+				<br>Learning to accept and express myself (as you may be able to tell by the amount of "personality" in this site). Rediscovering my love for the arts. Exploring different cultures and learning a new language. Overall in my "era" of personal growth. :)</p>
 				</div></a>
 			<div>
 				<h3>My future</h3>
